--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,21 @@
   "description": "push notification sample",
   "main": "index.js",
   "scripts": {
-    "start": "http-server "
+    "start": "npm-run-all bundle:mainjs bundle:sw serve",
+    "build": "npm-run-all bundle:mainjs bundle:sw",
+    "serve": "http-server public",
+    "bundle:mainjs": "webpack --config webpack.config.js",
+    "bundle:sw": "webpack --config webpack.config.sw.js"
   },
   "author": "Y.Takeuchi",
   "license": "ISC",
   "dependencies": {
+    "dexie": "^2.0.4",
     "http-server": "^0.11.1"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2"
   }
 }
