--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,14 @@
   "description": "push notification sample",
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all bundle:mainjs bundle:sw serve",
+    "start": "npm-run-all clean:mainjs clean:sw bundle:mainjs bundle:sw serve",
+    "clean": "npm-run-all clean:mainjs clean:sw",
     "build": "npm-run-all bundle:mainjs bundle:sw",
     "serve": "http-server public",
     "bundle:mainjs": "webpack --config webpack.config.js",
-    "bundle:sw": "webpack --config webpack.config.sw.js"
+    "bundle:sw": "webpack --config webpack.config.sw.js",
+    "clean:mainjs": "del-cli public/main.js public/main.js.map",
+    "clean:sw": "del-cli public/sw.js public/sw.js.map"
   },
   "author": "Y.Takeuchi",
   "license": "ISC",
@@ -17,6 +20,7 @@
     "http-server": "^0.11.1"
   },
   "devDependencies": {
+    "del-cli": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2"
